# dougu

./: .gitignore  Cargo.toml  README.md  output.json
crates/db/: Cargo.toml
crates/db/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/dropbox/: mod.rs
dougu/: Cargo.toml  build.rs
dougu-actions/: Cargo.toml  README.md
dougu-actions/src/: error.rs  executor.rs  lib.rs  registry.rs
dougu-actions/src/dropbox/: launcher.rs  lib.rs  mod.rs
dougu-actions/src/file/: launcher.rs  lib.rs
dougu-actions/src/root/: help.rs  lib.rs  license.rs  mod.rs  version.rs
dougu-actions/src/root/resources/: mod.rs
dougu-app/: Cargo.toml  build.rs
dougu-app/src/: i18n.rs  main.rs
dougu-app/src/commands/dropbox/: lib.rs
dougu-app/src/commands/file/: lib.rs
dougu-app/src/commands/root/: license.rs
dougu-bridge/: Cargo.toml
dougu-bridge/src/: lib.rs
dougu-bridge/src/dropbox/: mod.rs
dougu-command-build/: Cargo.toml
dougu-command-build/src/: launcher.rs  lib.rs  resources.rs
dougu-command-build/src/resources/: log_messages.rs  mod.rs
dougu-command-build/tests/: build_pack.rs
dougu-command-dropbox/: Cargo.toml
dougu-command-dropbox/src/: launcher.rs  lib.rs
dougu-command-file/: Cargo.toml
dougu-command-file/src/: launcher.rs  lib.rs
dougu-command-file/src/resources/: es.json  i18n-en.json  mod.rs
dougu-command-obj/: Cargo.toml  README.md  example.json
dougu-command-obj/src/: launcher.rs  lib.rs
dougu-command-obj/src/resources/: messages.rs
dougu-command-root/: Cargo.toml  README.md
dougu-command-root/src/: help.rs  lib.rs  lib.rs.bak  license.rs  version.rs
dougu-command-root/src/resources/: en.json  i18n-en.json  ja.json  messages.rs
dougu-domain/: Cargo.toml
dougu-domain-dropbox/: Cargo.toml
dougu-domain-dropbox/src/: lib.rs
dougu-domain/src/: lib.rs
dougu-domain/src/entity/: mod.rs
dougu-domain/src/event/: mod.rs
dougu-domain/src/i18n/: mod.rs
dougu-domain/src/repository/: mod.rs
dougu-domain/src/service/: mod.rs
dougu-domain/src/value/: mod.rs
dougu-essentials/: Cargo.toml
dougu-essentials-archive/: Cargo.toml  README.md
dougu-essentials-archive/src/: lib.rs
dougu-essentials-archive/src/providers/: mod.rs  zip.rs
dougu-essentials-archive/src/resources/: error_messages.rs
dougu-essentials-i18n-foundation/: Cargo.toml
dougu-essentials-i18n-foundation/src/: embedded.rs  lib.rs
dougu-essentials-i18n-foundation/tests/: embedded_test.rs  integration_test.rs  layer_test.rs
dougu-essentials-kvs/: Cargo.toml  README.md
dougu-essentials-kvs/src/: lib.rs
dougu-essentials-kvs/src/examples/: basic_usage.rs  mod.rs
dougu-essentials-kvs/src/resources/: messages.rs  mod.rs
dougu-essentials-obj/: Cargo.toml  README.md
dougu-essentials-obj/src/: lib.rs
dougu-essentials-obj/src/examples/: cli.rs  format_conversion.rs
dougu-essentials-obj/src/resources/: errors.rs  formats.rs
dougu-essentials-sql/: Cargo.toml  README.md
dougu-essentials-sql/src/: lib.rs
dougu-essentials-sql/src/examples/: basic_usage.rs  mod.rs
dougu-essentials/docs/filesystem/: box.md  cloud-storage.md  dropbox.md  ftp-sftp.md  google-drive.md  local.md  onedrive.md  overview.md  webdav.md
dougu-essentials/src/: lib.rs
dougu-essentials/src/archive/: mod.rs
dougu-essentials/src/archive/providers/: zip.rs
dougu-essentials/src/archive/resources/: error_messages.rs  log_messages.rs
dougu-essentials/src/core/: error.rs  mod.rs
dougu-essentials/src/data/: mod.rs
dougu-essentials/src/data/address/: domain.rs  email.rs  error.rs  geouri.rs  ip.rs  mac.rs  mod.rs  socket.rs  types.rs  uri.rs  url.rs  urn.rs
dougu-essentials/src/data/encoding/: base32.rs  base64.rs  hex.rs  mod.rs  tests.rs  uuencode.rs
dougu-essentials/src/data/uniqueid/: error.rs  format.rs  mod.rs  parse.rs  tests.rs  timestamp.rs  types.rs
dougu-essentials/src/data/uuid/: format.rs  mod.rs  parse.rs  tests.rs  timestamp.rs  types.rs
dougu-essentials/src/data/version/: mod.rs
dougu-essentials/src/fs/: capability.rs  cloud.rs  entry.rs  folder.rs  local.rs  mod.rs  path.rs  provider.rs  readonly.rs  resources.rs
dougu-essentials/src/fs/local/: local_fs.rs  mod.rs
dougu-essentials/src/fs/path/: component.rs  core.rs  default.rs  essential.rs  generic.rs  local.rs  mod.rs  posix.rs  resolver.rs  tests.rs  traits.rs  url.rs  utils.rs  windows.rs
dougu-essentials/src/fs/providers/: local.rs
dougu-essentials/src/fs/resources/: error_messages.rs
dougu-essentials/src/fs/sharing/: memory.rs  mod.rs  provider.rs
dougu-essentials/src/fs/versioning/: local.rs  mod.rs
dougu-essentials/src/i18n/: currency.rs  integration.rs  locale.rs  mod.rs  script.rs
dougu-essentials/src/i18n/cldr/: calendar.rs  collation.rs  list.rs  (+8 more)
dougu-essentials/src/kvs/: mod.rs
dougu-essentials/src/log/: config.rs  filter.rs  formatter.rs  framework.rs  interface.rs  mod.rs  writer.rs
dougu-essentials/src/math/: decimal.rs  mod.rs
dougu-essentials/src/runtime/: mod.rs
dougu-essentials/src/sql/: mod.rs
dougu-essentials/src/text/: case.rs  encoding.rs  mod.rs
dougu-essentials/src/time/: duration.rs  error.rs  instant.rs  mod.rs  period.rs
dougu-essentials/tests/: fs_path_test.rs  icu4x_integration_test.rs  log_test.rs  time_data_processor_test.rs  time_integration_test.rs  time_scheduler_test.rs
dougu-foundation/: Cargo.toml
dougu-foundation-i18n/: Cargo.toml
dougu-foundation-i18n/src/: embedded.rs  lib.rs
dougu-foundation-i18n/tests/: embedded_test.rs  integration_test.rs  layer_test.rs
dougu-foundation-run/: Cargo.toml
dougu-foundation-run/src/: app_info.rs  i18n_adapter.rs  lib.rs
dougu-foundation-run/src/resources/: error_messages.rs  es.json  i18n-en.json  i18n-ja.json  ja.json  log_messages.rs  mod.rs
dougu-foundation/src/: lib.rs
dougu-foundation/src/i18n/: embedded.rs  mod.rs
dougu-foundation/src/resources/: i18n.rs  mod.rs
dougu-foundation/src/run/: app_info.rs  i18n.rs  i18n_adapter.rs  mod.rs
dougu-foundation/src/ui/: formatters.rs  manager.rs  mod.rs
dougu/src/: i18n.rs  main.rs
dougu/src/commands/: mod.rs
(+88 files in other folders)
