[workspace]
members = [
    "crates/db",
    "crates/essentials",
    "crates/commands/file",
    "crates/commands/dropbox",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
essentials = { path = "crates/essentials" } 