[workspace]
members = [
    "dougu",
    "dougu-essentials",
    "dougu-essentials-fs",
    "dougu-essentials-kvs",
    "dougu-essentials-sql",
    "dougu-foundation-run",
    "dougu-bridge",
    "dougu-foundation-ui",
    "dougu-foundation-i18n",
    "dougu-essentials-build",
    "dougu-essentials-archive"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.77"
ciborium = "0.2.1"
bson = "2.9.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
jaq-parse = "1.0.2"
jaq-interpret = "1.2.0"
jaq-syn = "1.0.0"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
once_cell = "1.18"
chrono = { version = "0.4.31", features = ["serde"] } 
