[package]
name = "dougu-actions"
version = "0.1.0"
edition = "2021"
description = "Actions for the dougu multi-utility command line tool"
authors = ["Original authors"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dougu-foundation = { path = "../dougu-foundation" }
dougu-essentials = { path = "../dougu-essentials" }
