[package]
name = "dougu-actions"
version = "1.0.0"
edition = "2024"
description = "The dougu-actions is a collection of application service."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21.7"
clap = { workspace = true }
jaq-parse = "1.0.0"
jaq-interpret = "1.0.0"
jaq-std = "1.0.0"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.10.0"
tokio = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
walkdir = "2.4.0"
zip = "0.6.6"
dougu-foundation = { path = "../dougu-foundation" }
dougu-essentials = { path = "../dougu-essentials" }
dougu-bridge = { path = "../dougu-bridge" }
