[package]
name = "dougu-actions"
version = "1.0.0"
edition = "2024"
description = "The dougu-actions is a collection of application service."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[dependencies]
dougu-foundation = { path = "../dougu-foundation" }
dougu-essentials = { path = "../dougu-essentials" }
dougu-bridge = { path = "../dougu-bridge" }
