[package]
name = "dougu-app"
version = "1.0.0"
edition = "2024"
description = "A multi-purpose CLI tool"
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
documentation = "https://github.com/watermint/dougu#readme"
homepage = "https://github.com/watermint/dougu"
readme = "../README.md"
build = "build.rs"

[dependencies]
dougu-essentials = { path = "../dougu-essentials" }
dougu-bridge = { path = "../dougu-bridge" }
dougu-foundation = { path = "../dougu-foundation", features = ["i18n"] }
dougu-actions = { path = "../dougu-actions" }

[build-dependencies]
chrono = "0.4"
