[package]
name = "dougu-bridge"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
dougu-essentials = { path = "../dougu-essentials" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true } 