[package]
name = "dougu-bridge"
version = "1.0.0"
edition = "2024"
description = "Bridge responsible for interact with external services such as Dropbox. This layer contains API endpoint wrapper and DTOs."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[dependencies]
dougu-essentials = { path = "../dougu-essentials" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true } 