[package]
name = "dougu-command-build"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full", "process"] }
async-trait = "0.1"
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2.3"
zip = "0.6"
