[package]
name = "dougu-command-build"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "process"] }
async-trait = { workspace = true }
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2.3"
zip = "0.6"
