[package]
name = "dougu-command-build"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "process"] }
async-trait = { workspace = true }
dougu-essentials-log = { path = "../dougu-essentials-log" }
dougu-essentials-build = { path = "../dougu-essentials-build" }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
dougu-foundation-run = { path = "../dougu-foundation-run", features = ["i18n"] }
dougu-foundation-i18n = { path = "../dougu-foundation-i18n" }
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2.3"
zip = "0.6"
tempfile = "3.10.0"

[dev-dependencies]
