[package]
name = "dougu-command-dropbox"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
dougu-essentials-log = { path = "../dougu-essentials-log" }
dougu-essentials-i18n = { path = "../dougu-essentials-i18n" }
dougu-domain-dropbox = { path = "../dougu-domain-dropbox" }
dougu-foundation-run = { path = "../dougu-foundation-run" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
