[package]
name = "dougu-command-file"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-essentials-i18n = { path = "../dougu-essentials-i18n" }
dougu-foundation-run = { path = "../dougu-foundation-run" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
tokio = { workspace = true }
