[package]
name = "dougu-command-file"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
async-trait = "0.1.68"
dougu-foundation-run = { path = "../dougu-foundation-run" }
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-essentials-i18n-foundation = { path = "../dougu-essentials-i18n-foundation" }
