[package]
name = "dougu-command-file"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
dougu-foundation-run = { path = "../dougu-foundation-run" }
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-foundation-i18n = { path = "../dougu-foundation-i18n" }
