[package]
name = "dougu-command-obj"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dougu-essentials-obj = { path = "../dougu-essentials-obj" }
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
bson = { workspace = true }
ciborium = { workspace = true }
quick-xml = { workspace = true }
jaq-parse = { workspace = true }
jaq-interpret = { workspace = true }
jaq-syn = { workspace = true }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
base64 = "0.21" 