[package]
name = "dougu-domain-dropbox"
version = "0.1.0"
edition = "2024"

[dependencies]
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
