[package]
name = "dougu-domain"
version = "1.0.0"
edition = "2024"

[features]
default = []
i18n = []

[dependencies]
# Common dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }

# Local dependencies
dougu-essentials = { path = "../dougu-essentials" }
dougu-foundation = { path = "../dougu-foundation" }

[dev-dependencies]
tokio = { workspace = true } 