[package]
name = "dougu-essentials-archive"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
zip = "0.6"
tempfile = "3.8" 