[package]
name = "dougu-essentials-i18n-foundation"
version = "0.1.0"
edition = "2024"

[dependencies]
dougu-essentials-i18n = { path = "../dougu-essentials-i18n" }
dougu-foundation-run = { path = "../dougu-foundation-run" }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.68"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] } 