[package]
name = "dougu-essentials-sql"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[features]
examples = [] 