[package]
name = "dougu-essentials"
version = "1.0.0"
edition = "2024"
description = "dougu-essential is a collection of basic libraries and wrapper of dependent libraries. Minimize impact of changes in supply chain"
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.22.1"
chrono = "0.4"
clap = "4.4"
env_logger = "0.10"
hex = "0.4"
log = "0.4.21"
once_cell = "1.18"
quick-xml = { version = "0.35.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.136"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.17"
uuid = { version = "1.4", features = ["serde"] }
walkdir = "2.4"

# Add ciborium dependency
ciborium = "0.2.2"

bson = "2.11.0"

thiserror = "1.0"

# Added dependencies
num-bigint = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

[dev-dependencies]
tempfile = "3.8"
