[package]
name = "dougu-foundation-i18n"
version = "0.1.0"
edition = "2024"

[dependencies]
dougu-essentials = { path = "../dougu-essentials" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dougu-foundation-run = { path = "../dougu-foundation-run", features = ["i18n"] } 