[package]
name = "dougu-foundation-run"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
dougu-essentials-i18n-foundation = { path = "../dougu-essentials-i18n-foundation" } 