[package]
name = "dougu-foundation-run"
version = "1.0.0"
edition = "2024"

[features]
default = []
i18n = ["dougu-foundation-i18n"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
dougu-foundation-i18n = { path = "../dougu-foundation-i18n", optional = true }
dougu-essentials = { path = "../dougu-essentials" }
chrono = { workspace = true } 