[package]
name = "dougu-foundation"
version = "1.0.0"
edition = "2024"
description = "The dougu-foundation is a basic framework of dougu application. That contains action workflow, or ui."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[features]
default = []
i18n = []

[dependencies]
# Common dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }

# UI specific dependencies
colored = "2.1.0"
prettytable-rs = "0.10.0"
textwrap = "0.16.0"

# Local dependencies
dougu-essentials = { path = "../dougu-essentials" }

[dev-dependencies]
tokio = { workspace = true } 