[package]
name = "dougu-foundation"
version = "1.0.0"
edition = "2024"
description = "The dougu-foundation is a basic framework of dougu application. That contains action workflow, or ui."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/watermint/dougu"
publish = false

[features]
i18n = []

