[package]
name = "dougu"
version = "0.1.0"
edition = "2024"
description = "A multi-command CLI tool with nested command structure for file and Dropbox operations."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/your-org/dougu"
documentation = "https://github.com/your-org/dougu#readme"
homepage = "https://github.com/your-org/dougu"
readme = "../README.md"

[dependencies]
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-essentials-i18n = { path = "../dougu-essentials-i18n" }
dougu-command-file = { path = "../dougu-command-file" }
dougu-command-dropbox = { path = "../dougu-command-dropbox" }
dougu-command-obj = { path = "../dougu-command-obj" }
dougu-command-build = { path = "../dougu-command-build" }
dougu-foundation-run = { path = "../dougu-foundation-run" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
