[package]
name = "dougu"
version = "1.0.0"
edition = "2024"
description = "A multi-command CLI tool with nested command structure for file and Dropbox operations."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/your-org/dougu"
documentation = "https://github.com/your-org/dougu#readme"
homepage = "https://github.com/your-org/dougu"
readme = "../README.md"
build = "build.rs"

[dependencies]
dougu-essentials-logger = { path = "../dougu-essentials-logger" }
dougu-essentials-i18n = { path = "../dougu-essentials-i18n" }
dougu-essentials-build = { path = "../dougu-essentials-build" }
dougu-command-file = { path = "../dougu-command-file" }
dougu-command-dropbox = { path = "../dougu-command-dropbox" }
dougu-command-obj = { path = "../dougu-command-obj" }
dougu-command-build = { path = "../dougu-command-build" }
dougu-command-root = { path = "../dougu-command-root" }
dougu-foundation-run = { path = "../dougu-foundation-run", features = ["i18n"] }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.31"
dougu-foundation-i18n = { path = "../dougu-foundation-i18n" }

[build-dependencies]
chrono = "0.4.31"
