[package]
name = "dougu"
version = "1.0.0"
edition = "2024"
description = "A multi-command CLI tool with nested command structure for file and Dropbox operations."
license = "Apache-2.0"
authors = ["Takayuki Okazaki <watermint@users.noreply.github.com>"]
repository = "https://github.com/your-org/dougu"
documentation = "https://github.com/your-org/dougu#readme"
homepage = "https://github.com/your-org/dougu"
readme = "../README.md"
build = "build.rs"

[dependencies]
dougu-essentials = { path = "../dougu-essentials" }
dougu-bridge = { path = "../dougu-bridge" }
dougu-foundation-run = { path = "../dougu-foundation-run", features = ["i18n"] }
dougu-foundation-ui = { path = "../dougu-foundation-ui" }
dougu-foundation-i18n = { path = "../dougu-foundation-i18n" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.31"
ciborium = { workspace = true }
bson = { workspace = true }
quick-xml = { workspace = true }
jaq-parse = { workspace = true }
jaq-interpret = { workspace = true }
jaq-syn = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2.3"
zip = "0.6"
tempfile = "3.10.0"
base64 = "0.21.7"

[build-dependencies]
chrono = "0.4.31"
